# moonshinev2-stt

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  docker-publish.yml
app/: main.py
app/api/: health.py  stream.py  transcriptions.py
app/core/: recognizer.py  vad.py
app/schemas/: responses.py
app/utils/: audio.py
tests/: conftest.py  test_api.py  test_schemas.py
