[project]
name = "moonshinev2-stt"
version = "1.0.0"
description = "OpenAI-compatible STT API server powered by Moonshine v2"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "sherpa-onnx>=1.10.40",
    "soundfile",
    "numpy",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
